k8s/sandbox.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sandbox-server
  labels:
    app: sandbox-server
spec:
  selector:
    app: sandbox-server
   
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
